# TCPIPSocketsInC

./: .gitignore  README.md
.github/: FUNDING.yml
src/: AddressUtility.c  CMakeLists.txt  DelimFramer.c  DieWithMessage.c  Framer.h  GetAddrInfo.c  LengthFramer.c  Practical.h  Practical.h.in  TCPClientUtility.c  TCPEchoClient.c  TCPEchoClient4.c  TCPEchoServer.c  TCPEchoServer4.c  TCPEchoServer6.c  TCPServerUtility.c  TestSizes.c  UDPEchoClient.c  UDPEchoServer.c  UDPServerUtility.c  VoteClientTcp.c  VoteEncoding.c  VoteEncodingBin.c  VoteProtocol.h  VoteServerTCP.c
src/include/: VoteEncoding.h
